--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-pip==22.3.1
+certifi==2022.12.7
+charset-normalizer==3.1.0
+idna==3.4
+numpy==1.24.2
+pandas==1.5.3
+pip==23.0.1
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.28.2
 setuptools==65.5.0
+six==1.16.0
+urllib3==1.26.15
