--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,10 +3,12 @@ charset-normalizer==3.1.0
 idna==3.4
 numpy==1.24.2
 pandas==1.5.3
-pip==23.0.1
+pip==23.1.2
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.28.2
 setuptools==65.5.0
 six==1.16.0
 urllib3==1.26.15
+flask==2.3.1
+
