--- a/front/splendia/angular.json
+++ b/front/splendia/angular.json
@@ -31,7 +31,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/app/app.component.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
