--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ executing==1.2.0
 Farama-Notifications==0.0.4
 fastjsonschema==2.16.3
 filelock==3.12.0
+flask==2.3.1
 fonttools==4.39.3
 fqdn==1.5.1
 furo==2023.3.27
@@ -105,6 +106,7 @@ rfc3986-validator==0.1.1
 scikit-learn==1.2.2
 scipy==1.10.1
 Send2Trash==1.8.2
+setuptools==65.5.0
 shap==0.41.0
 shape==0.1.1
 six==1.16.0
